# alloy-bench-eval

./: README.md  bench_eval.py  convert_dataset.py  pyproject.toml  run_all.sh  run_benchmark.py
configs/: pure_metalgpt.json  pure_qwen3.json
data/: Alloy-Bench.xlsx
