[project]
name = "alloy-bench-eval"
version = "0.1.0"
description = "Alloy-Bench evaluation runner for domain LLMs"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vllm==0.8.5.post1",
    "transformers==4.51.3",
    "peft==0.8.2",
    "torch==2.6.0",
    "outlines==0.1.11",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "datasets==4.8.4",
    "pyarrow==23.0.1",
]
